<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


        <com.jenzz.materialpreference.PreferenceCategory android:title="@string/normal">

            <com.jenzz.materialpreference.SwitchPreference
                android:key="@string/right_key"
                android:title="@string/right"
                android:summary="@string/right_summary"/>
            </com.jenzz.materialpreference.PreferenceCategory>

        <com.jenzz.materialpreference.PreferenceCategory android:title="@string/other">

            <com.jenzz.materialpreference.Preference
                 android:key="@string/advice_key"
                 android:title="@string/advice"
                 android:summary="@string/advice_summary"/>

        </com.jenzz.materialpreference.PreferenceCategory>
</PreferenceScreen>