<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.yukisnote.ui.AddNoteActivity">
    <include layout="@layout/toolbar"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/content_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:focusable="true"
                    android:focusableInTouchMode="true">
                    <fr.ganfra.materialspinner.MaterialSpinner
                        android:id="@+id/spinner"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="10dp"
                        android:prompt="@string/test"
                        android:entries="@array/array"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        app:ms_baseColor="@color/grey"
                        app:ms_multiline="true"
                        app:ms_highlightColor="@color/blue_light"
                        app:ms_floatingLabelText="类型"
                        app:ms_floatingLabelColor="@color/blue_light"
                        app:ms_arrowColor="@color/blue_light"/>
                    <com.rengwuxian.materialedittext.MaterialEditText
                        style="@style/EditTextTheme"
                        android:id="@+id/title"
                        android:layout_margin="20dp"
                        android:textColor="@color/black"
                        app:met_floatingLabel="highlight"
                        app:met_floatingLabelText="@string/title"
                        app:met_floatingLabelAlwaysShown="true"
                        app:met_textColor="@color/blue_light"/>
                    <com.rengwuxian.materialedittext.MaterialEditText
                        style="@style/EditTextTheme"
                        android:id="@+id/content"
                        android:layout_margin="20dp"
                        android:lineSpacingExtra="4dp"
                        app:met_hideUnderline="true"
                        app:met_floatingLabel="highlight"
                        app:met_floatingLabelText="@string/content"
                        app:met_floatingLabelAlwaysShown="true"
                        app:met_textColor="@color/blue_light"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    </LinearLayout>
                <TextView
                    android:id="@+id/notetime"
                    android:layout_below="@+id/content_container"
                    android:layout_margin="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </RelativeLayout>
            </ScrollView>
        <include layout="@layout/toolbar_shadow_layout"/>
        </FrameLayout>
</LinearLayout>
